# xc-bot

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  flake.nix  nixos-module.nix  package.nix
.cargo/: audit.toml
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
migrations/: 20210327000400_create_flights.sql  20210327004800_create_users_subscriptions.sql  20210402203000_users_registration_date.sql  20210404204500_user_public_key.sql
nix/: README.md  flake.nix  module.nix  package.nix  result
nixos-tests/: test-module.nix
src/: cli.rs  config.rs  db.rs  main.rs  notifiers.rs  server.rs  threema.rs  xcontest.rs
src/notifiers/: mod.rs  threema.rs
src/server/: command_handlers.rs  mod.rs
