[package]
name = "xc-bot"
version = "0.3.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
anyhow = "1"
bytes = "1"
futures = "0.3"
hyper = { version = "0.14", features = ["server"] }
image = { version = "0.25", features = ["jpeg", "png"], default-features = false }
lazy_static = "1.4"
regex = "1.4"
reqwest = { version = "0.11", features = ["rustls-tls-native-roots"], default-features = false }
rss = "2"
serde = "1"
serde_derive = "1"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite", "macros", "migrate" ], default-features = false }
threema-gateway = "0.17"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"], default-features = false }
toml = "0.8"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
